demo/eric-oss-adc-app-engineering/deployment/charts/network-policy/eric-adc-ctr-p-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-adc-k6-policy
spec:
  podSelector:
    matchLabels:
      app: eric-csm-p-ctr
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: adc-k6
