demo/eric-oss-adc-app-engineering/deployment/charts/network-policy/eric-adc-data-catalog-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-adc-k6-data-catalog-policy
spec:
  podSelector:
    matchLabels:
      app: eric-oss-data-catalog
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: adc-k6
