demo/eric-oss-adc-app-engineering/deployment/charts/network-policy/eric-adc-fns-stub-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-adc-k6-fns-stub-policy
spec:
  podSelector:
    matchLabels:
      app: eric-oss-file-notification-enm-stub
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: adc-k6
