demo/eric-oss-adc-app-engineering/deployment/charts/network-policy/eric-adc-k6-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-adc-k6-policy
spec:
  podSelector:
    matchLabels:
      app: csm-ves-collector
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: adc-k6
