demo/eric-oss-adc-app-engineering/deployment/charts/network-policy/eric-adc-sftp-server-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-adc-k6-sftp-server-policy
spec:
  podSelector:
    matchLabels:
      app: eric-data-sftp-server-external
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: adc-k6
