demo/eric-oss-adc-app-engineering/deployment/charts/network-policy/eric-adc-ssm-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eric-adc-k6-subsys-policy
spec:
  podSelector:
    matchLabels:
      app: eric-eo-subsystem-management
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: adc-k6
